cabal-version:          3.0
name:                   miso-audio-test
version:                0.2

executable app
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:        Audio
  build-depends:        base, jsaddle, miso, time, lens
  default-language:     GHC2021
  ghc-options:          -Wall -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
  cpp-options:          -DWASM
  default-extensions:   CPP 
 
